test/errors/stmt_try.py
try:
    pass
else:
    pass

try:
    pass
else:
    pass
finally:
    pass

try:
    pass
finally:
    pass
else:
    pass

try:
    pass
except:
    pass
finally:
    pass
else:
    pass

try:
    pass
finally:
    pass
except:
    pass
